# json_typegen

./: Cargo.toml  README.md
json_typegen/: Cargo.toml
json_typegen/src/: lib.rs
json_typegen_cli/: Cargo.toml  README.md
json_typegen_cli/src/: main.rs
json_typegen_demo/: Cargo.toml
json_typegen_shared/: Cargo.toml
json_typegen_shared/src/: progress.rs  shape.rs
json_typegen_shared/src/generation/: python.rs
json_typegen_shared/src/inference/: jsoninfer.rs
json_typegen_wasm/: Cargo.toml
