[package]
name = "json_typegen_demo"
version = "0.7.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
# json_typegen = "0.7"
json_typegen = { path = "../json_typegen", version = "0.7" }
